Improve clipping label picker interactivity when changing selected label (issue #167)

--- a/wx-src/style/clippingLabelPicker.css
+++ b/wx-src/style/clippingLabelPicker.css
@@ -3,7 +3,7 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 
-#clipping-label-picker {
+#clipping-label-picker > option {
     background-color: white;
 }
 
@@ -34,4 +34,5 @@
 #clipping-label-picker > option[value="grey"] {
     color: gray;
 }
+
 
